# DTEAM-Django-practical-test

./: .env.example  .env.production  .gitignore  Dockerfile  README.md  README_Docker.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-droplet.sh  docker-entrypoint.sh  nginx.conf  pyproject.toml  setup-droplet.sh  supervisord.conf
cv_project/core/: __init__.py  celery.py  droplet_settings.py  settings.py  test_settings.py  urls.py
cv_project/main/: admin.py  api_urls.py  api_views.py  context_processors.py  middleware.py  models.py  serializers.py  tasks.py  test_api.py  test_celery_email.py  test_translation.py  tests.py  urls.py  views.py
cv_project/main/fixtures/: initial_data.json
cv_project/templates/: base.html
cv_project/templates/emails/: cv_pdf_email.html  cv_pdf_email.txt
cv_project/templates/main/: cv_detail.html  cv_list.html  cv_pdf.html  request_logs.html  settings.html
