[project]
name = "dteam-django-practical-test"
version = "0.1.0"
description = ""
authors = [
    {name = "AlfurIvan",email = "ivan.zharyi.i@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
reportlab = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
black = "^23.0"
flake8 = "^6.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"