[project]
name = "dteam-django-practical-test"
version = "0.1.0"
description = ""
authors = [
    {name = "AlfurIvan",email = "ivan.zharyi.i@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.2.4"
reportlab = "^4.0"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
redis = "^6.2.0"
celery = "^5.5.3"
eventlet = "^0.40.1"
openai = "^1.95.1"
django-redis = "^6.0.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
black = "^23.0"
flake8 = "^6.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"